deploy-using-gatewayAPI/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-deployment
spec:
  selector:
    matchLabels:
      app: portfolio
  replicas: 2
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
      - image: sarvadnya/portfolio:v1.0.4
        imagePullPolicy: Always
        name: sarva-portfolio
        ports:
        - containerPort: 80
