deploy-using-gatewayAPI/deploy-gateway-api.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    control-plane: gateway-api-controller
  name: aws-application-networking-system

---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: amazon-vpc-lattice
  namespace: aws-application-networking-system
spec:
  controllerName: application-networking.k8s.aws/gateway-api-controller

---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: portfolio-gateway
  namespace: aws-application-networking-system
spec:
  gatewayClassName: amazon-vpc-lattice
  listeners:
  - name: http
    protocol: HTTP
    port: 80

---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: portfolio-http-route
  namespace: aws-application-networking-system
spec:
  parentRefs:
  - name: portfolio-gateway
    sectionName: http
  rules:
  - backendRefs:
    - name: portfolio-service
      kind: Service
      port: 80

---
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
  namespace: aws-application-networking-system
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
  selector:
    app: portfolio

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-deployment
  namespace: aws-application-networking-system
spec:
  selector:
    matchLabels:
      app: portfolio
  replicas: 2
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
      - image: sarvadnya/portfolio:v1.0.4
        imagePullPolicy: Always
        name: sarva-portfolio
        ports:
        - containerPort: 80
