deploy-using-gatewayAPI/http_route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: portfolio-http-route
spec:
  parentRefs:
  - name: portfolio-gateway
    sectionName: http
  rules:
  - backendRefs:
    - name: portfolio-service
      kind: Service
      port: 80
